--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,5 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/MVC.Chapter2/MVC.Chapter2/Web.config
+/MVC.Chapter2/MVC.Chapter2/Views/web.config
