--- a/PizzaStoreMVC/PizzaStoreMVC.Business/PizzaStoreMVC.Business.csproj
+++ b/PizzaStoreMVC/PizzaStoreMVC.Business/PizzaStoreMVC.Business.csproj
@@ -99,7 +99,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\ICustomizer.cs" />
+    <Compile Include="Models\Sauce.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\SauceRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -114,7 +116,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PizzaStoreMVC\PizzaStoreMVC.Client.csproj">
