--- a/PizzaStroeAPI/PizzaStroeAPI.Client/PizzaStroeAPI.Client.csproj
+++ b/PizzaStroeAPI/PizzaStroeAPI.Client/PizzaStroeAPI.Client.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountModel.cs" />
+    <Compile Include="Agent007.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
