--- a/PizzaStoreMVC2/PizzaStoreMVC2.Client/PizzaStoreMVC2.Client.csproj
+++ b/PizzaStoreMVC2/PizzaStoreMVC2.Client/PizzaStoreMVC2.Client.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>PizzaStoreMVC2.Client</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -289,7 +289,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>57374</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/pizzastore/</IISUrl>
+          <IISUrl>http://localhost:57374/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
